src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  p {
    @apply mt-4 text-gray-700 leading-relaxed font-normal;
  }

  h1 {
    @apply text-2xl text-pink-600	opacity-100 mt-8 mb-2 tracking-normal;
  }

  h2 {
    @apply text-xl text-pink-600	opacity-100 my-8 font-semibold;
  }

  h3 {
    @apply text-base text-gray-500 italic font-light;
  }

  time {
    @apply text-sm text-gray-500 font-light;
  }

  h3 > a {
    @apply decoration-gray-400 underline text-gray-700 font-normal;
  }

  aside {
    @apply text-sm italic;
  }

  blockquote {
    @apply text-lg not-italic font-semibold;
  }

  a {
    @apply font-light text-pink-600 underline decoration-pink-400 hover:opacity-100;
  }

  figure {
    @apply my-8 drop-shadow-xl;
  }

  figcaption {
    @apply text-sm mt-2;
  }

  body {
    @apply bg-zinc-50;
  }
}

